Add JsonConfigurationSource